[update]Modified theUser panel to be responsive and to show appointments correctly on small screens. // Modificado el panelUsuario para que sea responsive y en pantallas pequeñas muestre las citas correctamente.

--- a/src/Common/CardUsuario/CardUsuario.css
+++ b/src/Common/CardUsuario/CardUsuario.css
@@ -1,5 +1,5 @@
 #card {
-    background-color:rgb(227, 227, 150) ;
+    background-color:darkgoldenrod ;
 }
 
 /* Estilos para los botones de la card */
