--- a/src/Pages/PanelUsuario/PanelUsuario.css
+++ b/src/Pages/PanelUsuario/PanelUsuario.css
@@ -37,7 +37,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #63dfd5;
+  background-color: rgb(200, 200, 162);
   border-radius: 2em;
 }
 
@@ -77,7 +77,6 @@
 }
 
 .modal-contenido {
-  background-color: #fff;
   padding: 2em;
   border-radius: 2em;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -110,7 +109,7 @@
   .modal-contenido {
     width: 35%;
     max-width: 35em;
-    background-color: #33b994;
+    background-color: rgb(200, 200, 162);
   }
 
   .modal-contenido form {
@@ -139,36 +138,47 @@
 }
 
 /* Ajustar la card para ocupar toda la pantalla en pantallas pequeñas */
+/* Ajustar la card para ocupar toda la pantalla en pantallas pequeñas */
+/* Ajustar la card para ocupar toda la pantalla en pantallas pequeñas */
 @media (max-width: 768px) {
-    .panelUsuarioEntero {
-      flex-direction: column; /* Mostrar los elementos en columna */
-    }
-  
-    .parteIzquierda {
-      height: 100%; /* Ocupar el 50% del alto de la pantalla */
-      width: 90%;
-      overflow-y: auto; /* Habilitar desplazamiento vertical si el contenido es más largo que el contenedor */
-      padding: 0;
-      background-color: #0d0d0d;
-    }
+  .panelUsuarioEntero {
+    flex-direction: column;
+    height: auto;
+  }
 
-    .parteDerecha {
-        display: none; /* Ocultar la parte derecha en pantallas pequeñas */
-      }
+  .parteIzquierda {
+    height: auto; /* Ajustar la altura automáticamente según el contenido */
+    width: 100%;
+    overflow-y: auto;
+    padding: 0;
+    background-color: #0d0d0d;
+  }
 
-      .card-body {
-        width: 150%;
-      }  
-      .card {
-        display: flex;
-        align-items: center;
+  .parteDerecha {
+    width: 100%;
+    background-image: url(../../../img/Captura\ desde\ 2023-07-26\ 02-57-08.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding: 1em; /* Agregar un espaciado */
+  }
+  .card {
+    
+  }
 
-      }
+  .cardUsuario {
+    width: 100%;
+    margin-bottom: 1em; 
+    /* Agregar un margen inferior para separar de las citas */
+  }
 
-      .lista-grupo-objeto {
-        margin-top: 0.5em;
-      }
+  .citasContainer {
+    max-height: calc(100vh - 300px); /* Ajustar el valor según el espacio disponible deseado para las citas */
+    overflow-y: auto;
+  }
 }
+
+
 
 .citasContainer {
   display: grid;
